--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ alembic==1.14.1
 annotated-types==0.7.0
 astunparse==1.6.3
 blinker==1.9.0
-boto3==1.36.5
-botocore==1.36.5
+boto3==1.36.9
+botocore==1.36.9
 cachetools==5.5.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -14,20 +14,19 @@ colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 databricks-sdk==0.41.0
-Deprecated==1.2.15
+Deprecated==1.2.18
 docker==7.1.0
 Flask==3.1.0
-flatbuffers==25.1.21
-fonttools==4.55.5
+flatbuffers==25.1.24
+fonttools==4.55.8
 gast==0.6.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-auth==2.38.0
 google-pasta==0.2.0
 graphene==3.4.3
-graphql-core==3.2.5
+graphql-core==3.2.6
 graphql-relay==3.2.0
-graphviz==0.20.3
 greenlet==3.1.1
 grpcio==1.70.0
 h5py==3.12.1
@@ -51,6 +50,7 @@ ml-dtypes==0.4.1
 mlflow==2.20.0
 mlflow-skinny==2.20.0
 namex==0.0.8
+narwhals==1.24.1
 numpy==2.0.2
 opentelemetry-api==1.29.0
 opentelemetry-sdk==1.29.0
@@ -60,15 +60,13 @@ optree==0.14.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
-plotly==5.24.1
+plotly==6.0.0
 protobuf==5.29.3
 pyarrow==18.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.6
 pydantic_core==2.27.2
-pydot==3.0.4
-pydotplus==2.0.2
 Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -87,7 +85,6 @@ six==1.17.0
 smmap==5.0.2
 SQLAlchemy==2.0.37
 sqlparse==0.5.3
-tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
@@ -102,4 +99,3 @@ Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
 zipp==3.21.0
->>>>>>> 05ec2c7 (Update model resnet5à and VGG16)
