Clean files model Update streamlit Scripts to clean dataset

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ streamlit/data/
 streamlit/model/
 benchmark_models/artefacts/*
 
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
